force-app/main/default/objects/Training_Plan__c/Training_Plan__c.object-meta.xml
<CustomObject>
    <label>Standard Training Plan</label>
    <nameField>
        <displayFormat>V2Training#{00000}</displayFormat>
        <label>Training Plan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Standard Training Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>