force-app/main/default/objects/Training_Plan__c/fields/Assignment__c.field-meta.xml
<CustomField>
    <fullName>Assignment__c</fullName>
    <label>Assignment</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>