force-app/main/default/objects/Training_Plan__c/fields/Trailhead_Module__c.field-meta.xml
<CustomField>
    <fullName>Trailhead_Module__c</fullName>
    <label>Trailhead Module</label>
    <type>Url</type>
</CustomField>