force-app/main/default/objects/Training_Plan__c/fields/Training_Name__c.field-meta.xml
<CustomField>
    <fullName>Training_Name__c</fullName>
    <label>Training Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Training</valueSetName>
    </valueSet>
</CustomField>