force-app/main/default/objects/Training_Plan__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Training_Name__c</columns>
    <columns>Topic_Name__c</columns>
    <columns>Day__c</columns>
    <columns>Trailhead_Module__c</columns>
    <columns>Assignment__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>